style.css
body {
    font-family: 'Roboto', sans-serif;
    background-color: #1B1B1B;
    color: #FFFFFF;
}

.nav-link {
    font-family: 'Roboto', sans-serif;
    font-size: 16px;
    font-weight: 500;
    padding: 10px;
}

.bg-image {
    background-image: url("../images/bg-hero.png");
    background-size:cover;
    background-position: center;
    background-repeat: no-repeat; 

}
.hero {
    padding: 200px 20px;
    
}

.hero h2 {
    font-size: 24px;
    line-height: 1.2;
    text-transform: uppercase;
    letter-spacing: 0.1em;
    color: #FFFFFF;
}

h1 {
    margin-top: 10px;
    font-weight: 700;
    font-size: 72px;
    line-height: 84px;
    text-transform: uppercase;
    letter-spacing: 0.1em;
    color: #FFFFFF;
}

h3 {
    font-size: 14px;
    line-height: 1.2;
    font-weight: 700;
    color: #F65282;
    text-transform: uppercase;
    letter-spacing: 0.1rem;
}

.logo {
    height: 25px;
}
.hero p {
    font-weight: normal;
    font-size: 18px;
    line-height: 30px;
    color: #FFFFFF;
    
}


.btn-branding {
    font-weight: 700;
    margin-top: 40px;
    background-color: #FFFFFF;
    padding: 18px 40px;
    border-radius: 50px;
    font-size: 14px;
    line-height: 17px;
    color: #272142;
    text-transform: uppercase;
    transition: 200ms all ease-in-out;
    letter-spacing: 0.1em;
}

.btn-branding:hover {
    border: 1px solid #FFFFFF;
    color: #FFFFFF;
}

.gallery {
    margin-top: 60px;
    margin-bottom: 30px;
}

.gallery img {
    height: 280px;
    padding: 20px;
}

.about-info {
    max-width: 92%;
    padding-top: 40px;
    padding-left: 30px;
}
.about-hero {
    margin: 0px auto;
    padding: 0;
    color: #FFFFFF;
}

.about-hero h2 {
    font-size: 18px;
    line-height: 1.2;
    font-weight: 700;
    color: #F65282;
    text-transform: uppercase;
    letter-spacing: 0.1rem;
}

.about-hero h1 {
    font-size: 64px;
    font-weight: 700;
    line-height: 1.2;
    margin-top: 35px;
    margin-bottom: 35px;
}

.about-photo {
    width: 100%;
    margin: 0 auto;

}

.about-hero p {
    font-size: 18px;
    line-height: 1.5;
    font-weight: 400;
    font-style: normal;
    margin-bottom: 50px;
}

.about-hero i {
    font-size: 16px;
    line-height: 18px;
    margin-bottom: 50px;
}

.icon {
    margin-left: 30px;
    margin-right: 30px;
}

.camera {
    background-color: #2D2727;
    border-radius: 4px;
    font-size: 18px;
    line-height: 30px;
    font-weight: 700;
    padding: 25px;
    margin-top: 30px;
    max-width: 80%
}

.camera img {
    margin-right: 25px;
}

.bg {
    background-image: url("..//images/hero-about.png");
    background-size:cover;
    background-position: center;
    background-repeat: no-repeat; 

}

.gallery-header {
    margin-top: 150px;
    margin-bottom: 150px;
}

.contact-header {
    margin-top: 150px;
    margin-bottom: 100px;
}
.contact p {
    font-size: 18px;
    line-height: 1.5;
    font-weight: 400;
    font-style: normal;
    color: #FFFFFF;
    margin-bottom: 30px;
}

.contact i {
    margin: 10px;
}

.header{
    background-color: #202020;
    color: #FFFFFF;
    align-items: center;
    }

a {
    text-decoration: none;
    color: #FFFFFF;
}

a:hover {
    color: rgba(255, 255, 255, 0.75);
}

.footer {
    background-color: #282323;
}

.footer p {
    font-size: 16px;
    line-height: 1.2;
    font-weight: 400;
}

.logo {
    max-height: 25px;
}


@media (max-width: 1200px ){
    .hide {
        display: none;
    }

}

@media (max-width: 990px){
    .hide-two {
        display: none;
    }

    h1 {
        font-size: 48px;
    }


}

@media (max-width:600px){
    h1 {
        font-size: 36px;
    }

    p {
        font-size: 12px;
        line-height: 1.5;
    }

    .logo {
        max-height: 15px;
    }
    .footer p {
        font-size: 8px;
    }

    .icon {
        margin-left: 10px;
        margin-right: 10px;
    }
    .camera {
        max-width: 100%;
    }

    
}

